force-app/main/default/objects/Contact/fields/col_AdditionalInformation__c.field-meta.xml
<CustomField>
    <fullName>col_AdditionalInformation__c</fullName>
    <description>Used in CollApp to store additional information on external contacts (e.g. former SHS employee, etc.)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Do not insert sensitive information</inlineHelpText>
    <label>Additional Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>