force-app/main/default/objects/Contact/fields/col_AreaOfResponsibility__c.field-meta.xml
<CustomField>
    <fullName>AreaOfResponsibility__c</fullName>
    <description>This field defines if an internal contact is a regional one or from HQ</description>
    <label>Area of Responsibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HQ</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>