force-app/main/default/objects/Contact/fields/col_CorporateKOL__c.field-meta.xml
<CustomField>
    <fullName>col_CorporateKOL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in CollApp to flag if external Contacts are Corporate KOLs</description>
    <label>Corporate KOL</label>
    <type>Checkbox</type>
</CustomField>