force-app/main/default/objects/Contact/fields/col_Country__c.field-meta.xml
<CustomField>
    <fullName>col_Country__c</fullName>
    <description>Introduced in CollApp for the management of internal contacts</description>
    <label>Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>col_OrgZone__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>SHS_Country</valueSetName>
    </valueSet>
</CustomField>