force-app/main/default/objects/Contact/fields/col_Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>The field is used in CollApp to display the Department of the related user on an internal contact</description>
    <formula>LinkedUser__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>