force-app/main/default/objects/Contact/fields/col_JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <description>Used in CollApp to store the role / job title of external contacts (it replaces the standard Salesforce field Title, no longer exposed on the layout in CollApp)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Role / Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>