force-app/main/default/objects/Contact/fields/col_LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>col_LicenseNumber__c</fullName>
    <description>Used in CollApp to store the License Number of external contacts</description>
    <encryptionScheme>None</encryptionScheme>
    <label>License #</label>
    <length>9</length>
    <type>Text</type>
</CustomField>