force-app/main/default/objects/Contact/fields/col_LinkedUser__c.field-meta.xml
<CustomField>
    <fullName>col_LinkedUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This fields allows to link an Internal contact to its corresponding Salesforce User record</description>
    <label>Linked User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>col_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>