force-app/main/default/objects/Contact/fields/col_NPI__c.field-meta.xml
<CustomField>
    <fullName>col_NPI__c</fullName>
    <description>This field is used to store the National Provider Identifier of an external contact in CollApp</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>National Provider Identifier</inlineHelpText>
    <label>NPI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>