force-app/main/default/objects/Contact/fields/col_OrgRegion__c.field-meta.xml
<CustomField>
    <fullName>OrgRegion__c</fullName>
    <description>Introduced in CollApp for the management of internal contacts</description>
    <label>Org Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OrgRegion</valueSetName>
    </valueSet>
</CustomField>