force-app/main/default/objects/Contact/fields/col_OrgZone__c.field-meta.xml
<CustomField>
    <fullName>OrgZone__c</fullName>
    <description>Introduced in CollApp for the management of internal contacts</description>
    <label>Org Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OrgRegion__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>OrgZone</valueSetName>
    </valueSet>
</CustomField>