force-app/main/default/objects/Contact/fields/col_PrimaryOrgUnit__c.field-meta.xml
<CustomField>
    <fullName>PrimaryOrgUnit__c</fullName>
    <description>Business Line(s) of an internal contact in CollApp</description>
    <label>Primary Org Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SHS_Primary_Org_Unit</valueSetName>
    </valueSet>
</CustomField>