force-app/main/default/objects/Contact/fields/col_RegionalKOL__c.field-meta.xml
<CustomField>
    <fullName>RegionalKOL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in CollApp to flag if external Contacts are regional KOLs</description>
    <label>Regional KOL</label>
    <type>Checkbox</type>
</CustomField>