force-app/main/default/objects/Contact/fields/col_Role__c.field-meta.xml
<CustomField>
    <fullName>col_Role__c</fullName>
    <description>This fields is used to define the role of an internal contact in Collap</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>col_ContactToProjectType</valueSetName>
    </valueSet>
</CustomField>