force-app/main/default/objects/Contact/fields/col_Specialty__c.field-meta.xml
<CustomField>
    <fullName>col_Specialty__c</fullName>
    <description>Used in CollApp to store the Specialty of external contacts</description>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biomedical Engineering (non-PhD)</fullName>
            </value>
            <value>
                <fullName>Cardiologist (general)</fullName>
            </value>
            <value>
                <fullName>Cardiologist (echocardiography)</fullName>
            </value>
            <value>
                <fullName>Cardiologist (electrophysiology)</fullName>
            </value>
            <value>
                <fullName>Cardiologist (interventional (catheterization lab))</fullName>
            </value>
            <value>
                <fullName>Clerk/Assistant/Lab Technician (Lab, Clinical Research, Other)</fullName>
            </value>
            <value>
                <fullName>Clinical Chemist (non-PhD)</fullName>
            </value>
            <value>
                <fullName>Clinical Research Coordinator</fullName>
            </value>
            <value>
                <fullName>Clinical Research Scientist (Board Certified)</fullName>
            </value>
            <value>
                <fullName>CEO (Chief Executive Officer)</fullName>
            </value>
            <value>
                <fullName>CFO (Chief Financial Officer)</fullName>
            </value>
            <value>
                <fullName>CMO (Chief Medical Officer)</fullName>
            </value>
            <value>
                <fullName>COO (Chief Operating Officer)</fullName>
            </value>
            <value>
                <fullName>Data Scientist</fullName>
            </value>
            <value>
                <fullName>Dosimetrist</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine Physician</fullName>
            </value>
            <value>
                <fullName>Endocrinologist</fullName>
            </value>
            <value>
                <fullName>Gastroenterologist / Hepatologist (digestive and liver physician)</fullName>
            </value>
            <value>
                <fullName>General Technician</fullName>
            </value>
            <value>
                <fullName>General Technologist</fullName>
            </value>
            <value>
                <fullName>Grad/PhD student</fullName>
            </value>
            <value>
                <fullName>Post Doc</fullName>
            </value>
            <value>
                <fullName>Hematologist / Oncologist physician</fullName>
            </value>
            <value>
                <fullName>Laboratory Management</fullName>
            </value>
            <value>
                <fullName>Medical Director</fullName>
            </value>
            <value>
                <fullName>Medical Physicist</fullName>
            </value>
            <value>
                <fullName>Neurologist</fullName>
            </value>
            <value>
                <fullName>Nuclear Medicine physician</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner / Physician Assistant</fullName>
            </value>
            <value>
                <fullName>Nurse Educator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>