force-app/main/default/objects/Contact/fields/col_StateProvinceOfIssuance__c.field-meta.xml
<CustomField>
    <fullName>col_StateProvinceOfIssuance__c</fullName>
    <description>Used in CollApp for external contacts</description>
    <label>State/Province of Issuance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Austr Capital Territ</fullName>
            </value>
            <value>
                <fullName>New South Wales</fullName>
            </value>
            <value>
                <fullName>Northern Territory</fullName>
            </value>
            <value>
                <fullName>Queensland</fullName>
            </value>
            <value>
                <fullName>South Australia</fullName>
            </value>
            <value>
                <fullName>Tasmania</fullName>
            </value>
            <value>
                <fullName>Victoria</fullName>
            </value>
            <value>
                <fullName>Western Australia</fullName>
            </value>
            <value>
                <fullName>Acre</fullName>
            </value>
            <value>
                <fullName>Alagoas</fullName>
            </value>
            <value>
                <fullName>Amazonas</fullName>
            </value>
            <value>
                <fullName>Amapa</fullName>
            </value>
            <value>
                <fullName>Bahia</fullName>
            </value>
            <value>
                <fullName>Ceara</fullName>
            </value>
            <value>
                <fullName>Distrito Federal, Brazil</fullName>
            </value>
            <value>
                <fullName>Espirito Santo</fullName>
            </value>
            <value>
                <fullName>Goias</fullName>
            </value>
            <value>
                <fullName>Maranhao</fullName>
            </value>
            <value>
                <fullName>Minas Gerais</fullName>
            </value>
            <value>
                <fullName>Mato Grosso do Sul</fullName>
            </value>
            <value>
                <fullName>Mato Grosso</fullName>
            </value>
            <value>
                <fullName>Para</fullName>
            </value>
            <value>
                <fullName>Paraiba</fullName>
            </value>
            <value>
                <fullName>Pernambuco</fullName>
            </value>
            <value>
                <fullName>Piaui</fullName>
            </value>
            <value>
                <fullName>Parana</fullName>
            </value>
            <value>
                <fullName>Rio de Janeiro</fullName>
            </value>
            <value>
                <fullName>Rio Grande do Norte</fullName>
            </value>
            <value>
                <fullName>Rondonia</fullName>
            </value>
            <value>
                <fullName>Roraima</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>