force-app/main/default/objects/Contact/fields/SHS_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>SHS_Full_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Full Name SHS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>