force-app/main/default/objects/Contact/recordTypes/External.recordType-meta.xml
<RecordType>
    <fullName>External</fullName>
    <active>true</active>
    <description>External contacts</description>
    <label>External</label>
</RecordType>