force-app/main/default/objects/Contact/validationRules/col_EmailCannotBeModified.validationRule-meta.xml
<ValidationRule>
    <fullName>col_EmailCannotBeModified</fullName>
    <active>false</active>
    <description>By CollApp users, no Internal Email shall be modifiable.</description>
    <errorConditionFormula>AND(
  $CustomMetadata.Validation_Rule_Configuration__mdt.Contact_Validation_Enable.SHS_Contact__c == True,
  ISCHANGED(Email),
  RecordType.Name == &apos;Internal&apos;,
  $Profile.Name == &apos;Standard CollApp User&apos;
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Internal Contact&apos;s Email cannot be changed</errorMessage>
</ValidationRule>