force-app/main/default/objects/Contact/validationRules/col_OnlyNumericValuesToBeUsed.validationRule-meta.xml
<ValidationRule>
    <fullName>col_OnlyNumericValuesToBeUsed</fullName>
    <active>true</active>
    <description>Ensure that only numeric values are entered in certain text fields (currently used for only License #)</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(col_LicenseNumber__c)),
NOT(ISNUMBER(col_LicenseNumber__c))
)</errorConditionFormula>
    <errorDisplayField>col_LicenseNumber__c</errorDisplayField>
    <errorMessage>Please make sure to enter only numbers in this field</errorMessage>
</ValidationRule>