force-app/main/default/objects/Contact/validationRules/Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(($CustomMetadata.Validation_Rule_Configuration__mdt.Contact_Validation_Enable.SHS_Contact__c = True),NOT(ISBLANK(Email)),
RecordType.Name == &apos;Internal&apos;,
NOT(OR(CONTAINS(Email,&apos;@siemens-healthineers.com&apos;),CONTAINS(Email,&apos;@siemens.com&apos;),CONTAINS(Email,&apos;@varian.com&apos;),CONTAINS(Email,&apos;@petnetsolutions.com&apos;))))

/*IF(AND(($CustomMetadata.Validation_Rule_Configuration__mdt.Contact_Validation_Enable.SHS_Contact__c = True),NOT(ISBLANK(Email)),
NOT(OR(CONTAINS(Email,&apos;@siemens-healthineers.com&apos;),CONTAINS(Email,&apos;@siemens.com&apos;),CONTAINS(Email,&apos;@varian.com&apos;)))),True,False)*/

/*IF(AND(($CustomMetadata.Validation_Rule_Configuration__mdt.Contact_Validation_Enable.SHS_Contact__c = True),
NOT(OR(CONTAINS(Email,&apos;@siemens-healthineers.com&apos;),CONTAINS(Email,&apos;@siemens.com&apos;),CONTAINS(Email,&apos;@varian.com&apos;)))),True,False)*/

/*IF(AND(($CustomMetadata.Validation_Rule_Configuration__mdt.Contact_Validation_Enable.SHS_Contact__c = True),
OR(CONTAINS(Email,&apos;@gmail.com&apos;),CONTAINS(Email,&apos;@yahoo.com&apos;),CONTAINS(Email,&apos;@outlook.com&apos;),CONTAINS(Email,&apos;@hotmail.com&apos;),CONTAINS(Email,&apos;@rediffmail.com&apos;))),True,False)*/</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Please enter email address with siemens-healthineers.com or siemens.com or varian.com</errorMessage>
</ValidationRule>