force-app/main/default/objects/Contact/listViews/detailed.listView-meta.xml
<ListView>
    <fullName>detailed</fullName>
    <columns>CONTACT.RECORDTYPE</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>AreaOfResponsibility__c</columns>
    <columns>Role__c</columns>
    <columns>OrgRegion__c</columns>
    <columns>OrgZone__c</columns>
    <columns>Country__c</columns>
    <columns>PrimaryOrgUnit__c</columns>
    <columns>SecondaryOrgUnit__c</columns>
    <filterScope>Everything</filterScope>
    <label>detailed</label>
</ListView>